--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cycler==0.10.0
 Flask==1.1.2
 Flask-RESTful==0.3.8
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
 joblib==1.0.1
@@ -23,4 +24,3 @@ sklearn==0.0
 threadpoolctl==2.1.0
 Werkzeug==1.0.1
 WTForms==2.3.3
-gunicorn
